[metadata]
name = conndb
version = 0.0.1
url = https://github.com/edenlib/conndb
author = Adam Turner
author_email = <turner.adch@gmail.com>
description = Connect to a database.

[options]
package_dir = 
    =src
packages = find:
python_requires = >=3.6
install_requires = psycopg2

[options.packages.find]
where = src
